# GradeManagementSystem

./: CMakeLists.txt  readme.md
include/: Student.h  student_system.h
src/: Student.cpp  grade_management_system  main.cpp  scores.txt  student_system.cpp
